--- a/components/cart/cart.module.scss
+++ b/components/cart/cart.module.scss
@@ -105,3 +105,11 @@
     }
 }
 
+.cart_access {
+    width: 100%;
+    height: 50vh;
+    text-align: center;
+    position: relative;
+    top: 200px;
+    font-size: 18px;
+}
