--- a/components/layout/main-navigation.module.scss
+++ b/components/layout/main-navigation.module.scss
@@ -3,7 +3,6 @@
     height: 70px;
     display: flex;
     flex-direction: row;
-    padding: 10px;
     position: fixed;
     top: 0;
     background-color: #fff;
@@ -37,12 +36,20 @@
         width: 50%;
         justify-content: flex-end;
         align-items: center;
+
         nav{
             margin-right: 20px;
+            @media screen and (max-width: 700px) {
+                margin-right: 5px;
+            }
             a {
                 margin: auto 10px auto 0px;
                 padding: 10px 20px;
                 cursor: pointer;
+                @media screen and (max-width: 700px) {
+                    padding: 5px 10px;
+                }
+
             }
             .login {
                 border: 1.5px solid #4B48D8;
